[package]
name = "array_expt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools-num = "0.1.3"
ndarray = { version = "0.15.6", features = ["blas", "approx", "approx-0_5", "rayon"] }
ndarray-linalg = { version = "0.16.0" }
num-traits = "0.2.15"
